[project]
name = "bb-poker-eval"
version = "0.1.0"
description = "A poker hand evaluator that employs a bitboard approach to evaluate hands with up to 9 cards."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.62.0",
    "numpy>=2.3.3",
]
license = "LICENSE"
readme = "README.md"
authors = [{ name = "Felix Ubl", email = "dev@fubl.at" }]